--- a/styles/style.css
+++ b/styles/style.css
@@ -3,20 +3,22 @@
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
+                    /*HEADER*/
 
 header{
-    width: 100%;
-    height: 5rem;
     left: 0px;
     top: 0px;
-    background: #ffffff;
+    width: auto;
+    height: auto;
+    display: block;
+    text-decoration: none;
 }
 
 .logo{
     vertical-align: middle;
     float: left;
     margin-top: 1rem;
-}
+} 
 header a{
     color: black;
 }
@@ -25,74 +27,18 @@ a:hover{
     font-style: normal;
 }
 .login-button{
-    padding-left: 110px;
+    padding-left: 180px;
 }
 
-#ul{
-    float: right;
-}
-
-#form{
-    height: 17em;
-    display: flex;
-    align-items: center;
-    justify-content: center
-}
-#formulario{
-    background-color: rgba(170, 170, 170, 0.1);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    box-shadow: inset 0px 5px 5px rgba(193, 15, 209, 0.692);
-    border-radius: 20px;
-    margin: 0 ;
-    height:35px;
-}
-.search-txt{
-    border-radius: 20px;
-    height:35px;
-    width: 250px;
-    border: none;
- padding-left: 10px;
-  outline: none;
-  background-color: transparent;
-  
-  color: #fff;
-  float: left;
-}
-#nome_produto{
-    color: rgb(138, 138, 138);
-}
-#nome_produto:hover{
-    text-decoration: none;
-    color: rgb(78, 4, 121);
-}
-.search-txt::-webkit-input-placeholder{
-   padding-left: 1rem;
-   color: #fff;
-}
-#lupa{
-    width: 35px;
-    height: 35px;
-    border-radius: 30px;
-    background-color:transparent;
-    float:left;
-    border:none;
-    margin-top: 0.1rem;
-   
-   
-   
-   
-}
-#lancamento{
-    margin-top:8rem;
+                    /*COMPRAS*/
+#novidades{
+    margin-top:3rem;
     text-align: center;
-    margin-bottom: 3rem;
-    font-family: Urban ;
-    
+    margin-bottom: 3rem;    
 }
-#lancamento h1{
+#novidades h1{
     text-align: center;
-    font-size: 5rem;
+    font-size: 4rem;
 }
 #card{
     
@@ -104,83 +50,100 @@ a:hover{
 .card-img{
     border-radius: top  calc(0.25rem - 1px);
     border-radius: bottom 0px;
-    
-    
 }
-#botao{
-    width: 9rem;
-   text-align: center;
-   background-color:rgb(22, 22, 22);
-   
-}
-#botaoo{
-    position: absolute;
-    z-index: 2;
-    align-items: center;
-    margin-left: 3em;
-    margin-top: 10em;
- 
-}
+
 #img{
     position: relative;
     z-index: 1;
 }
-#sobre{
-    
-    background: rgb(224, 223, 223);
-
-
+.card-img{
+    border-radius: 1rem;
 }
-#sobre-urban{
-    margin-top: 6rem;
-}
-#sobre-urban p{
-    text-align: justify;
-}
-#sobre-urban h1{
-    font-family: scret;
-    text-align: center;
-
+#nome_produto{
+    color: black;
+    font-size: 1.3rem;
 }
 
+
+                            /*LOGIN*/
 #card-login{
-
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20px);
     margin-top: 5rem;
-    border: 10px;
-    
+    border-radius: 20px;
+    padding: 10px;
 }
 #card-login h4{
-    color: #fff;
+    color: black;
     text-align: center;
 }
+
 .login-input{
-  
     text-align: center;
-    margin-top: 1rem;
-    border-radius: 10px;
-    box-shadow: 0;
-    
+    margin-top: 0.8rem;
+    border-radius: 15px;
+    width: 350px;
 }
 .login-input:focus {
     box-shadow: 0 0 0 0;
     outline: 0;
 }
+input:focus::-webkit-input-placeholder {
+    color: transparent;
+ }
+ input:focus:-moz-placeholder { 
+    color: transparent;  
+ }
+ input:focus::-moz-placeholder {  
+    color: transparent;  
+ }
+ input:focus:-ms-input-placeholder {  
+    color: transparent;  
+ }
 #card-login h4{
     margin-top:2rem;
     
 }
 .btn-login{
-  
-    margin-top: 1.5rem;
-    
-    
+    margin-top: 1rem;
+    width: 150px;
+    vertical-align: auto;
+    margin-left: 58px;
+    background-color: black;
+    border-color: transparent;
 }
-#bot{width:300px}
 
+#entsai{
+    width:300px
+}
 
 #login-btn{
     margin-bottom: 1rem;
+    background-color: black;
+    border-color: transparent;
 }
+#entr-btn{
+    background-color: black;
+    border-color: transparent;
+}
+
+                    /*CONTATO*/
+#card-contato{
+    margin-top: 5rem;
+    border-radius: 20px;
+    padding: 10px;
+}
+#card-contato h4{
+    color: black;
+    text-align: center;
+}
+textarea:focus::-webkit-input-placeholder {
+    color: transparent;
+ }
+ textarea:focus:-moz-placeholder { 
+    color: transparent;  
+ }
+ textarea:focus::-moz-placeholder {  
+    color: transparent;  
+ }
+ textarea:focus:-ms-input-placeholder {  
+    color: transparent;  
+ }
